# Gerenciador_de_senhas

./: app.py  criador_bd_tab.py  pyproject.toml
src/gerenciador_de_senhas/: chave.key  core.py  crypto_utils.py  storage.py  ui.py
